Remove api folder and edit vercel config

--- a/AnimalPredVercel/vercel.json
+++ b/AnimalPredVercel/vercel.json
@@ -1,8 +1,12 @@
 {
     "builds": [
     {
-        "src": "api/index.py",
+        "src": "index.py",
         "use": "@vercel/python"
+    },
+    {
+        "src": "static/**",
+        "use": "@vercel/static"
     }
     ],
     "routes": [
